@@ -71,6 +71,7 @@ static cl_fixnum option_values[ECL_OPT_LIMIT+1] = {
 	1,		/* ECL_OPT_TRAP_SIGINT */
 	1,		/* ECL_OPT_TRAP_SIGILL */
 	1,		/* ECL_OPT_TRAP_SIGBUS */
+	1,		/* ECL_OPT_TRAP_SIGPIPE */
 	1,		/* ECL_OPT_TRAP_INTERRUPT_SIGNAL */
 	1,		/* ECL_OPT_SIGNAL_HANDLING_THREAD */
 	128,		/* ECL_OPT_SIGNAL_QUEUE_SIZE */
