@@ -948,6 +948,7 @@ typedef enum {
 	ECL_OPT_TRAP_SIGINT,
 	ECL_OPT_TRAP_SIGILL,
 	ECL_OPT_TRAP_SIGBUS,
+        ECL_OPT_TRAP_SIGPIPE,
 	ECL_OPT_TRAP_INTERRUPT_SIGNAL,
 	ECL_OPT_SIGNAL_HANDLING_THREAD,
 	ECL_OPT_SIGNAL_QUEUE_SIZE,
